--- a/.github/workflows/post.yaml
+++ b/.github/workflows/post.yaml
@@ -2,7 +2,7 @@ on:
   schedule:
     - cron: '0 13 * * 0,1,4,5' # Trigger every Sunday, Monday, Thursday, Friday at 10pm JST
 jobs:
-  send-post-request:
+  send-post:
     runs-on: ubuntu-latest
     steps:
       - name: Set body variable
