--- a/.github/workflows/post.yaml
+++ b/.github/workflows/post.yaml
@@ -21,12 +21,8 @@ jobs:
             echo "::set-output name=body::{\"day\": \"week\"}"
           fi
 
-      - name: Set URL variable
-        run: |
-          echo "::set-output name=url::https://mr-garbage.herokuapp.com/day"
-
       - name: Send POST request
         run: |
-          curl --location --request POST "${{ steps.url.outputs.url }}" \
+          curl --location --request POST https://mr-garbage.herokuapp.com/day \
           --header 'Content-Type: application/json' \
           --data-raw "${{ steps.set_body.outputs.body }}"
